# iot-projekt2

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  docker-compose.yml  vcpkg.json
.github/workflows/: ci.yml
common/: constants.h  defer.h  random.h  result.h
fake-dht/: CMakeLists.txt  fake-dht.cpp
fake-led/: CMakeLists.txt  fake-led.cpp
gui/: CMakeLists.txt  db.h  db_reader.h  gol.h  gui.cpp  helpers.h  logging.h
ingress/: CMakeLists.txt  ingress.cpp
misc/: README.md  fake-dht.rdbg  gui.rdbg  ingress.rdbg
python/: Pipfile  data2influx_v1.py  publish.py
scripts/: install-build-dependencies.sh  install-dependencies.sh  install-docker.sh
src/: CMakeLists.txt  main.cpp
volumes/: README.md
